@@ -3,7 +3,6 @@ package com.bakdata.conquery.models.auth.permissions;
 import java.util.Collections;
 import java.util.Set;
 
-import com.bakdata.conquery.io.cps.CPSType;
 import lombok.ToString;
 import lombok.extern.slf4j.Slf4j;
 
@@ -13,7 +12,6 @@ import lombok.extern.slf4j.Slf4j;
  */
 @Slf4j
 @ToString(callSuper = true)
-@CPSType(id = "ADMIN", base = StringPermissionBuilder.class)
 public final class AdminPermission extends StringPermissionBuilder {
 
 	public static final String DOMAIN = "admin";
@@ -30,10 +28,14 @@ public final class AdminPermission extends StringPermissionBuilder {
 	 */
 	@Override
 	public Set<Ability> getAllowedAbilities() {
-		return Collections.emptySet();
+		return Set.of(Ability.READ);
 	}
 
 	public static ConqueryPermission onDomain() {
 		return INSTANCE.domainPermission();
+	}
+
+	public static ConqueryPermission onDomain(Set<Ability> abilities) {
+		return INSTANCE.abilityPermission(abilities);
 	}
 }
